# FMU-Standalone-App

./: .gitignore  CMakeLists.txt  Heater.mo  LICENSE.txt  README.md  import_fmu.py
Heater/: CMakeLists.txt  FMU.cpp  FMU.h  Heater.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  Simulator.cpp  Simulator.h  resources.qrc
Heater/sources/: ModelicaInternal.c  cvode.c  dlldata.h  dsblock.h  dsblock1.c  dsblock4.c  dsblock5.c  dsmodel.c  dsutil.h  dymf2c.c  fmiCoSimFunctions_int.c  fmiCommonFunctions_int.c  integration.h  jac.c  matrixop.h  uthash.h  util.h
include/: model.h
model/: modelDescription.xml
model/sources/: cvode_impl.h  dsblock2.c  dsblock3.c  dse_macros.h  dymosim.h  fmiMEFunctions_int.c  fmiModelIdentifier.h  integration.c  localeless.cpp  localeless.h  matrixop.c  matrixop1.h  moutil.c  ss2dym_rt_omp.c  types.h  util.c
model/sources/cvode/: cvode.h
src/: heater.c  simulator.c
